# TFetch

./: .gitattributes  Cargo.toml  Dockerfile  LICENSE  LICENSE.md  Makefile  README.md  tmp.sh
docker-stuff/: Dockerfile  docker-compose.yml
docs/: README.md
docs/man/: TFetch.1
licenses/: LICENSE.GPL-3.0-or-later.md  LICENSE.MIT.MD
src/: colors.c  disk.c  extra_functions.c  kernel.c  line-break.c  logo.c  main.c  main.h  main.rs  memory.c  newline.c  os.c  packages.c  shell.c  uptime.c  user-host-name.c  user-host-name.h
src/include/: color.h  colors.h  disk.h  extra_functions.h  kernel.h  line-break.h  logo.h  main.h  memory.h  newline.h  os.h  packages.h  shell.h  uptime.h  user-host-name.h
src/user-host-name/: README.md
