[package]
name = "TFetch"
version = "0.1.0"
edition = "2021"
authors = ["Thamognya Kodi <contact@thamognya.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "fetch_tools"
path = "src/lib.rs"

[[bin]]
name = "tfetch"
path = "src/main.rs"

[dependencies]
